Fix z-index

--- a/template/base.sass
+++ b/template/base.sass
@@ -77,6 +77,7 @@ body > a.blogtitle
   color: #fff
   text-align: center
   font-weight: bold
+  z-index: 1000
 
   a
     color: #fff
